--- a/aten/src/ATen/native/native_functions.yaml
+++ b/aten/src/ATen/native/native_functions.yaml
@@ -3371,7 +3371,7 @@
   dispatch:
     CompositeExplicitAutograd: linear_out
 
-- func: zendnn_linear(Tensor input, Tensor weight, Tensor? bias=None, *, bool is_weight_prepacked=False) -> Tensor
+- func: zendnn_linear(Tensor input, Tensor weight, Tensor? bias=None, *, bool is_weight_prepacked=False, str post_op="none") -> Tensor
   dispatch:
     CPU: zendnn_linear
 
